# protocol-v2-ezkl-integration

./: .gitignore  .gitmodules  foundry.toml  hex_proof_script.sh  price_data.json  tick_data.json
ezkl-py-scripts/: LTV-update.py  README.md  cronjob.py  enable-hl-big-blocks.py  pyproject.toml
flats/: FlattenedComptroller.sol  FlattenedDA.sol  FlattenedUniTickAttestor.sol
notebooks/: 1_GARCH_modeling.ipynb  2_EZKL_conversion.ipynb  3_Monte_Carlo_Sim.ipynb  README.md  pyproject.toml
script/: Deploy.s.sol  Ezkl.s.sol
script/ezkl/: cronjob.py
script/oracle/: SetOracle.s.sol
src/: DA.sol  Pool.sol  RiskEngine.sol
src/ezkl/: Comptroller.sol  DA.sol  SentimentOracleCache.sol  UniTickAttestor.sol  Verifier.sol
test/: BaseTest.t.sol
test/core/: RiskEngine.t.sol
test/mocks/: MockERC20.sol
