[project]
name = "sentiment-ezkl-sim"
version = "0.1.0"
description = "Monte carlo simulation for Sentiment using ezkl"
authors = [{ name = "jseam", email = "hello.jseam@gmail.com" }]
dependencies = [
    "ezkl>=15.5.0",
    "numpy>=2.1.3",
    "onnxruntime>=1.20.0",
    "onnx>=1.17.0",
    "scipy>=1.14.1",
    "pandas>=2.2.3",
    "jupyterlab>=4.3.0",
    "torch>=2.5.1",
    "matplotlib>=3.9.2",
    "web3>=6.11.1",
    "python-crontab>=3.0.0",
    "eth-typing>=3.5.1",
    "eth-utils>=2.3.1",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "py-solc-x>=2.0.3",

]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
